<resources>
    <string name="app_name">QRQuest</string>
    <string name="title_map">Map</string>
    <string name="title_qrcode_library">Library</string>
    <string name="title_add_qrcode">Add New QR Code</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="view_qr_code_stats">View QR Code Stats</string>
    <string name="summary_total_number_of_qr_codes_scanned">Total Number of QR Codes Scanned</string>
    <string name="summary_sum_of_scores_of_qr_codes_scanned">Sum of Scores of QR Codes Scanned</string>
    <string name="summary_lowest_scoring">Lowest Scoring</string>
    <string name="summary_highest_scoring">Highest Scoring</string>
    <string name="name">Name</string>
    <string name="exampleName">Grug</string>
    <string name="phone">Phone</string>
    <string name="examplePhone">780–694–2000</string>
    <string name="email">Email</string>
    <string name="exampleEmail">grug@gmail.com</string>
    <string name="create">Create</string>
    <string name="about_me">About Me</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="intro_logo">Intro Logo</string>
    <string name="qr_code_name">QR Code Name</string>
    <string name="temp_generated_image">Temp generated image</string>
    <string name="qr_name">QR Name</string>
    <string name="comment">Comment</string>
    <string name="leave_location">Leave Location</string>
    <string name="comment_content">Cool Location</string>
    <string name="points_gen">"Points Generated: "</string>
    <string name="submit">Submit Code</string>
    <string name="qr_code_img">qr_code_img</string>
    <string name="take_picture">take picture</string>
    <string name="contact_information">Contact Information</string>
    <string name="profile_total_points">Total Points</string>
    <string name="profile_highest_score">Highest Score</string>
    <string name="profile_lowest_score">Lowest Score</string>
    <string name="profile_recent_codes">Recent QR Codes</string>
    <string name="settings_menu">Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="record_geo_location">Record Geo-Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="external_users">Other\'s With This QR Code</string>
    <string name="external_user_screen_name">Player\'s Profile</string>
    <string name="zero">0</string>
    <string name="summary_unique_highest_scoring_rank">Unique Highest Scoring Rank</string>
    <string name="crown">Crown</string>
    <string name="summary_unique_highest_scoring_rank">Unique Highest Scoring Rank</string>
    <string name="comments">Comments</string>
    <string name="comments_user">Username</string>
    <string name="comments_text">No Comment Added Yet</string>
</resources>