<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map" >

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.cmput301w23t00.qrquest.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_qrcode_library"
        android:name="com.cmput301w23t00.qrquest.ui.library.LibraryFragment"
        android:label="@string/title_qrcode_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_add_qrcode"
        android:name="com.cmput301w23t00.qrquest.ui.addqrcode.AddQRCodeFragment"
        android:label="@string/title_add_qrcode"
        tools:layout="@layout/fragment_addqrcode" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.cmput301w23t00.qrquest.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cmput301w23t00.qrquest.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>