<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="111dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/qr_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/comment"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/comment_content"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="217dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/points_gen"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/leave_location"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <Button
        android:id="@+id/button"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="44dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="368dp"
        android:layout_height="351dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="192dp"
        android:contentDescription="@string/qr_code_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>