<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="76dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/editProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <View
        android:id="@+id/editProfileImageMask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignStart="@+id/editProfileImage"
        android:layout_alignTop="@+id/editProfileImage"
        android:layout_margin="00dp"
        android:background="@drawable/mask_profileImage"
        app:layout_constraintBottom_toBottomOf="@+id/editProfileImage"
        app:layout_constraintEnd_toEndOf="@+id/editProfileImage"
        app:layout_constraintStart_toStartOf="@+id/editProfileImage"
        app:layout_constraintTop_toTopOf="@+id/editProfileImage"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/editNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#0f0f0f"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/editNameField"
        app:layout_constraintStart_toStartOf="@+id/editNameField" />

    <EditText
        android:id="@+id/editNameField"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:hint="@string/exampleName"
        android:inputType="textPersonName"
        android:paddingHorizontal="15dp"
        android:textColorHint="#b3b3b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="223dp" />

    <TextView
        android:id="@+id/editAboutMeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/about_me"
        android:textColor="#0f0f0f"
        app:layout_constraintBottom_toTopOf="@+id/editAboutMeField"
        app:layout_constraintStart_toStartOf="@+id/editAboutMeField" />

    <EditText
        android:id="@+id/editAboutMeField"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:hint="@string/exampleName"
        android:inputType="textMultiLine"
        android:paddingHorizontal="15dp"
        android:textColorHint="#b3b3b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="314dp" />

    <TextView
        android:id="@+id/editPhoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/phone"
        android:textColor="#0f0f0f"
        app:layout_constraintBottom_toTopOf="@+id/editPhoneField"
        app:layout_constraintStart_toStartOf="@+id/editPhoneField" />

    <EditText
        android:id="@+id/editPhoneField"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:hint="@string/examplePhone"
        android:inputType="phone"
        android:paddingHorizontal="15dp"
        android:textColorHint="#b3b3b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="391dp" />

    <TextView
        android:id="@+id/editEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/email"
        android:textColor="#0f0f0f"
        app:layout_constraintBottom_toTopOf="@+id/editEmailField"
        app:layout_constraintStart_toStartOf="@+id/editEmailField" />

    <EditText
        android:id="@+id/editEmailField"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:hint="@string/exampleEmail"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:textColorHint="#b3b3b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="476dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/button_shape"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#000000"

        app:layout_constraintBottom_toBottomOf="@+id/editConfirmButton"
        app:layout_constraintEnd_toStartOf="@+id/editConfirmButton"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editConfirmButton"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:text="@string/confirm"
        android:background="@drawable/button_shape"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailField"
        app:layout_constraintVertical_bias="0.503" />

</androidx.constraintlayout.widget.ConstraintLayout>