<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Comment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="true">

    <FrameLayout
        android:id="@+id/comment_user_picture_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.3">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/comment_user_picture"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/view_qr_code_stats"
            android:src="@drawable/baseline_qr_code_2_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/comment_circular_mask"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/mask_profile_image" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/comment_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments_user"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/comment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_text" />
    </LinearLayout>
</LinearLayout>