<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_forward_black_24dp"
        android:fontFamily="sans-serif"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/edit_profile"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:theme="@style/Theme.QRQuest"
        style="?android:attr/borderlessButtonStyle"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/push_notification_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="5dp"
            android:text="@string/push_notifications"
            android:textSize="18sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHighlight="#9C00FF00"
            android:textColorLink="#2B00FF00"
            android:theme="@style/Theme.QRQuest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/geo_location_switch_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/record_geo_location"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:theme="@style/Theme.QRQuest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>


